--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,22 @@
     <div class="container">
         <div>
             <h1>CURSOS</h1>
-            <h2>Educação Financeira é tudo de bom</h2>
+            <p class="sub-title">Educação Financeira é tudo de bom</p>
+            <div class="box-course-description">
+                <img src="imagens/ilustra-poupando.png" />
+                <div>
+                    <h2>Investimento para Iniciantes</h2>
+                    <p class="description">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium,
+                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                        dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+                        fugit,
+                        sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                    </p>
+                    <div class="button">Começar Agora</div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">
