--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,38 @@
                     <div class="button">Começar Agora</div>
                 </div>
             </div>
+
+            <div class="box-course-description">
+                <img src="imagens/ilustra-investimento.png" />
+                <div>
+                    <h2>Poupando e Rendendo</h2>
+                    <p class="description">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium,
+                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                        dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+                        fugit,
+                        sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                    </p>
+                    <div class="button">Começar Agora</div>
+                </div>
+            </div>
+
+            <div class="box-course-description">
+                <img src="imagens/ilustra-independencia.png" />
+                <div>
+                    <h2>Independência Financeira</h2>
+                    <p class="description">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium,
+                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                        dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+                        fugit,
+                        sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                    </p>
+                    <div class="button">Começar Agora</div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">
